
Änderungen
----------

v0.6.0 (07.11.2009)
 * New class tx_cfcleague_util_Cache

v0.5.6 (06.11.2009) (not released)
 * Multiple agegroups for competitions
 * Age group field for teams
 * New service class for clubs
 * Matchnote types can be extended without PHP code

v0.5.5 (18.10.2009) (not released)
 * Performance-Issue in Match-Record solved. Unnecessary lookup of profiles removed.
 * Logo for competition added
 * BE-Modules: Create competition from BE-Module
 * BE-Modules: Module competition->teams extended. It is possible to add teams from current page to a competition.
 * BE-Modules: orderby in profile search fixed
 * Handling of logos changed. Club records can handle several logos. There is a new selectbox in team record to select one of these club logos.
 * BE-Modules: Module competition->match table rewritten. Opponents can be changed before match creation. Automatic lookup for keystrings.
 * BE-Modules: Module "Manage Team" rewritten.

v0.5.4 (25.01.2009)
 * Bugfix: Mayday message occurred when new profiles were created

v0.5.3 (06.01.2009)
 * Target page for new team notes is always taken from team
 * Missing include of tx_div fixed

v0.5.2 (06.01.2009) (not released)
 * New field to set profile types
 * Profile merge supports team notes
 * New History-Button in profile search
 * New BE module to manage team notes
 * It is now possible to create new matches from BE modul
 * New datatype stadium with relations to club und games

v0.5.1 (25.10.2008)
 * Compatible with TYPO3 4.2.2
 * New field shortname in group record

v0.5.0 (07.09.2008)
 * New BE Layout for TYPO3 4.2. Many thanks to Thomas Maroschik!
 * New field shortname in group record

v0.4.7 (24.08.2008)
 * Additional fields in club record like address, description or email

v0.4.6 (31.07.2008)
 * BE module finished to join players to team
 * Profiles are sorted by lastname in backend 

v0.4.5 (20.07.2008)
 * Small modification for t3sportsbet

v0.4.4 (12.07.2008)